# course

./: CMakeLists.txt
IgorMash/: CMakeLists.txt
Lesson_1/: CMakeLists.txt
Lesson_1/five/: CMakeLists.txt  MyClass.cpp  MyClass.h
Lesson_1/one/: CMakeLists.txt  one.cpp
Lesson_2/: CMakeLists.txt
Lesson_2/five/: CMakeLists.txt  fun.cpp  fun.h  main.cpp
Lesson_2/one_2/: CMakeLists.txt  GreeceGods.cpp  GreeceGods.h  main.cpp
Lesson_2/two/: CMakeLists.txt  two.cpp
