# Minimal cmake version required
cmake_minimum_required(VERSION 3.1)

# Project title
project(Lesson_2)

# Language version required: C++ 14
set(CMAKE_CXX_STANDARD 14)

# Source files
set(SRCS 
  #  hello.cpp
)

add_subdirectory(one_2)
#add_subdirectory(two)
#add_subdirectory(five)
